# iam-lifecycle-demo

./: .env.example  .gitignore  DEPLOY.md  README.md  SECURITY.md  _config.yml  compose.yaml  index.html  verify-deployment.sh
backend/: Dockerfile  celery.Dockerfile  pyproject.toml  start_dev_environment.sh  start_dev_server.sh
backend/app/: main.py
backend/app/api/v1/: routes_audit.py  routes_auth.py  routes_dashboard.py  routes_health.py  routes_hr.py  routes_rbac.py  routes_runs.py  routes_saas.py  routes_sync.py  routes_users.py
backend/app/config/: entitlements.yaml  entitlements.yaml.bak.20250828_162413  entitlements.yaml.bak.20250828_162428  entitlements.yaml.bak.20250828_162526  entitlements.yaml.bak.20250828_162548
backend/app/core/: config.py  db.py  security.py
backend/app/models/: account.py  audit_log.py  entitlement.py  run.py  user.py
backend/app/services/: audit.py  diff.py  identity_engine.py
backend/app/services/provisioner/: _base.py  github_mock.py  google_ws_mock.py
backend/app/static/: dashboard.html
backend/app/utils/: csv_loader.py
backend/app/workers/: tasks.py
backend/tests/unit/: test_csv_loader.py  test_identity_engine.py
docs/: index.html
samples/: hr_roster.csv
